# cross-platform-angular-vulkan

./: .code-workspace.txt  .gitignore  README.md  explanation_of_gitignores.md
.github/workflows/: windows.yml
angular-app/: package-lock.json  package.json
angular-app/src/: index.html
cpp-renderer/: Renderer.cpp  Renderer.hpp  main_binding.cpp  renderer_jni.cpp
cpp-renderer/src/: CMakeLists.txt  main_binding.cpp
docs/: Angular-C++-Vulkan-Tutorial.md  folder_structure.txt  software_architecture.drawio  software_architecture.txt  software_architecture_components.md  software_model_overview.drawio
electron-app/: package-lock.json  package.json  tsconfig.json  webpack.config.js
electron-app/src/: main.ts  preload.ts  rendererAddon.d.ts  typings.d.ts
nativescript-app/: HomeComponent.ts
nativescript-app/app/main/java/com/myapp/: RendererJNI.java
nativescript-app/src/services/: renderer-services.ts
